# pro_audio_config

./: Cargo.toml  DEVELOPMENT.md  README.md
icons/: pro-audio-config.desktop
src/: audio.rs  config.rs  lib.rs  main.rs  monitoring.rs  ui.rs  utils.rs
tests/: audio_integration.rs  integration.rs  integration_tests.rs  ui_integration.rs
tests/common/: mod.rs
